--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "Xcraft scm backends",
   "main": "index.js",
+  "engines": {
+    "node": ">=6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +15,8 @@
     "scm"
   ],
   "repository": {
-    "type": "file",
-    "url": "lib/xcraft-core-scm"
+    "type": "git",
+    "url": "git+https://github.com/Xcraft-Inc/xcraft-core-scm.git"
   },
   "author": "Mathieu Schroeter",
   "license": "MIT",
@@ -23,5 +26,8 @@
     "xcraft-core-process": "0.1.0",
     "xcraft-core-subst": "0.1.0"
   },
-  "devDependencies": {}
+  "bugs": {
+    "url": "https://github.com/Xcraft-Inc/xcraft-core-scm/issues"
+  },
+  "homepage": "https://github.com/Xcraft-Inc/xcraft-core-scm#readme"
 }
