--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["xcraft", "backends", "scm"],
+  "keywords": [
+    "xcraft",
+    "backends",
+    "scm"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xcraft-Inc/xcraft-core-scm.git"
@@ -18,7 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.4.0",
-    "xcraft-core-fs": "^1.0.0",
+    "xcraft-core-fs": "^2.0.0",
     "xcraft-core-process": "^1.0.0",
     "xcraft-core-subst": "^1.0.0"
   },
@@ -27,6 +31,9 @@
   },
   "homepage": "https://github.com/Xcraft-Inc/xcraft-core-scm#readme",
   "devDependencies": {
-    "xcraft-dev-rules": "^0.4.0"
-  }
+    "prettier": "1.18.2",
+    "xcraft-dev-prettier": "^1.0.0",
+    "xcraft-dev-rules": "^1.0.2"
+  },
+  "prettier": "xcraft-dev-prettier"
 }
