--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.4.0",
+    "fs-extra": "^9.1.0",
     "xcraft-core-fs": "^2.0.0",
     "xcraft-core-process": "^1.0.0",
     "xcraft-core-subst": "^1.0.0"
